cabal-version:      2.4
name:               build-env
version:            0.1.0.0
author:             Ben Gamari
maintainer:         ben@smart-cactus.org

library
    exposed-modules:  Build, BuildOne, CabalPlan, Utils
    hs-source-dirs:   src
    build-depends:    base ^>=4.15.1.0,
                      process,
                      filepath,
                      directory,
                      temporary,
                      text,
                      bytestring,
                      containers,
                      async,
                      aeson
    default-language: Haskell2010

executable build-env
    main-is:          Main.hs
    build-depends:    base ^>=4.15.1.0,
                      build-env
    ghc-options:      -threaded
    hs-source-dirs:   app
    default-language: Haskell2010
