cabal-version:      2.4
name:               build-env
version:            0.1.0.0
author:             Ben Gamari
maintainer:         ben@smart-cactus.org

common common
    build-depends:      base >= 4.15 && < 4.18,
                        bytestring,
                        containers
    default-language:   Haskell2010
    default-extensions: BangPatterns,
                        BlockArguments,
                        DerivingStrategies,
                        DisambiguateRecordFields,
                        GeneralizedNewtypeDeriving,
                        LambdaCase,
                        NamedFieldPuns,
                        StandaloneKindSignatures
    ghc-options:        -Wall
                        -Wcompat
                        -fwarn-missing-local-signatures
                        -fwarn-incomplete-patterns
                        -fwarn-incomplete-uni-patterns
                        -fwarn-missing-deriving-strategies
                        -fno-warn-unticked-promoted-constructors

library
    import:           common
    exposed-modules:  Build, BuildOne, CabalPlan, Config, Utils
    hs-source-dirs:   src
    build-depends:    process,
                      filepath,
                      directory,
                      temporary,
                      text,
                      async,
                      aeson
    default-language: Haskell2010

executable build-env
    import:           common
    main-is:          Main.hs
    build-depends:    optparse-applicative,
                      build-env
    ghc-options:      -threaded
    hs-source-dirs:   app
    other-modules:    Options, Parse
