cabal-version: 3.0
name:          pkg1
version:       0.1.0.0

common common

  build-depends:
    base
  default-language:
    Haskell2010

library
  import:
    common
  hs-source-dirs:
    lib
  exposed-modules:
    Pkg1

library sublib1
  import:
    common
  hs-source-dirs:
    sublib1
  visibility:
    public
  exposed-modules:
    Pkg11

library sublib2
  import:
    common
  hs-source-dirs:
    sublib2
  visibility:
    public
  exposed-modules:
    Pkg12
  build-depends:
    pkg1:sublib1
