cabal-version: 3.0
name:          pkg2
version:       0.1.0.0

common common

  build-depends:
    base
  default-language:
    Haskell2010

library sublib1
  import:
    common
  hs-source-dirs:
    lib
  exposed-modules:
    Pkg2

executable Test
  import:
    common
  hs-source-dirs:
    exe
  main-is:
    Main.hs
  build-depends:
      pkg2:sublib1
    , pkg1:{pkg1,sublib1,sublib2}
